--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       dockerfile: Dockerfile
       target: test
   release:
+    image: 133404724839.dkr.ecr.us-east-1.amazonaws.com/flabbyninja/todobackend:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -20,6 +21,7 @@ services:
       MYSQL_USER: todo
       MYSQL_PASSWORD: password
   app:
+    image: 133404724839.dkr.ecr.us-east-1.amazonaws.com/flabbyninja/todobackend:${APP_VERSION}
     extends:
       service: release
     depends_on:
